--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    margin: 0%;
+}
 .container{
     display:flex;
     flex-direction: row;
@@ -6,46 +9,51 @@
 .grid1{
     background-color:rgb(80, 171, 80);
     height: 50px;
-    width: 50%;
+    width: 70%;
 }
 .grid2{
     background-color:blue ;
-    width: 50% ;
+    width: 30% ;
     height: 50px;
 
 }
 .grid3{
     background-color: red ;
-    width: 50% ;
+    width: 30% ;
     height: 50px;
 }
 .grid4{
     background-color: orange ;
-    width: 50% ;
+    width: 30% ;
     height: 50px;
 }
 .grid5{
     background-color: grey;
-    width: 50%;
+    width: 40%;
     height: 50px;
 }
 .grid6{
     background-color: red ;
-    width: 50% ;
+    width: 30% ;
     height: 50px;
 }
 .grid7{
     background-color: yellow ;
-    width: 50%;
+    width: 20%;
     height: 50px;
 }
 .grid8{
     background-color:aqua ;
-    width: 50%;
+    width: 30%;
     height: 50px;
 }
 .grid9{
     background-color: coral;
-    width: 50%;
+    width: 20%;
     height: 50px;
+}
+.grid10{
+    background-color: black;
+    width: 100%;
+    height: 200px;
 }
